fix not readable dorpdown-toggle

--- a/website/Solidare-IT-g6/app/assets/stylesheets/application.css
+++ b/website/Solidare-IT-g6/app/assets/stylesheets/application.css
@@ -85,6 +85,10 @@ h2 {
 	z-index: 1000;
 }
 
+button.dropdown-toggle {
+	color: rgba(52, 73, 94, 0.74902);
+}
+
 footer {
 	margin-top: 30px;
 	height: 300px;
